--- a/calculator-app/package.json
+++ b/calculator-app/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "ts-node src/index.ts",
     "test": "jest"
   },
   "keywords": [],
@@ -13,6 +14,8 @@
     "@types/express": "^4.17.21",
     "express": "^4.18.2",
     "supertest": "^6.3.4",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
@@ -20,6 +23,8 @@
     "@babel/preset-typescript": "^7.23.3",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.11.19",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.6",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.2"
   },
